gccida/c3/find_reloads_toplev
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4798:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4795:6: error: conflicting types for 'find_reloads_toplev'
rtx  find_reloads_toplev( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:257:12: note: previous declaration is here
static rtx find_reloads_toplev  PARAMS ((rtx, int, enum reload_type, int,
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4845:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v8), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4861:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4875:32: error: use of undeclared identifier 'machine_mode'
result = gen_lowpart_common( ( machine_mode)*( ( unsigned __int8 *)x + 2), v21); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4894:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( reloads_subreg_address->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4897:32: error: use of undeclared identifier 'machine_mode'
result = gen_lowpart_common( ( machine_mode)*( ( unsigned __int8 *)reloads_subreg_address + 2), v23); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4926:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reloads_subreg_address + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4948:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( replace_reloads && recog_data_0.operand[opnum] != x ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/reload.c:4955:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)memloc + 2), 
  ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads_toplev/src/obj/reload.o] Error 1
